--- a/apache-config/.htaccess
+++ b/apache-config/.htaccess
@@ -1,16 +1,17 @@
-# .htaccess for Apache2 configuration
+# .htaccess for LiteSpeed/Apache configuration
 # Place this in the root directory
 
 RewriteEngine On
 
+# Debug: Add environment variable to track rewrites (remove in production)
+RewriteRule ^api/(.*)$ backend/public/index.php?api_path=$1 [L,QSA,E=REWRITE_MATCHED:1]
+
 # Handle direct backend access (for debugging and direct PHP file access)
+# Only if the file actually exists and is not an API request
 RewriteCond %{REQUEST_URI} ^/backend/
+RewriteCond %{REQUEST_URI} !^/api/
 RewriteCond %{REQUEST_FILENAME} -f
 RewriteRule ^backend/(.*)$ backend/$1 [L]
-
-# Handle API requests - forward to backend with query parameter
-# Updated for better LiteSpeed compatibility
-RewriteRule ^api/(.*)$ backend/public/index.php?api_path=$1 [L,QSA]
 
 # Handle React SPA routing
 RewriteCond %{REQUEST_FILENAME} !-f
@@ -40,8 +41,18 @@ RewriteRule . /index.html [L]
     RewriteRule ^(.*)$ $1 [R=200,L]
 </IfModule>
 
-# PHP configuration
+# PHP configuration - Updated for LiteSpeed compatibility
 <IfModule mod_php.c>
+    php_flag display_errors Off
+    php_value error_reporting E_ALL
+    php_value memory_limit 256M
+    php_value upload_max_filesize 50M
+    php_value post_max_size 50M
+    php_value max_execution_time 300
+</IfModule>
+
+# LiteSpeed specific PHP configuration
+<IfModule mod_lsapi.c>
     php_flag display_errors Off
     php_value error_reporting E_ALL
     php_value memory_limit 256M
